<resources>
    <string name="app_name">IBIHomeTest</string>
    <string name="label_list">רשימת מוצרים</string>
    <string name="label_details">פרטי מוצר</string>
    <string name="label_settings">הגדרות</string>
    <string name="title_notifications">הודעות</string>


    <!-- Login -->
    <string name="username">שם משתמש</string>
    <string name="password">סיסמא</string>
    <string name="login">התחברות</string>
    <string name="error_message">שגיאה</string>
    <string name="bio_error_message">שגיאה בזיהוי</string>
    <string name="bio_title">התחברות עם טביעת אצבע</string>
    <string name="bio_subTitle">הנח את האצבע כדי להתחבר</string>
    <string name="bio_negative_button">ביטול</string>


    <!-- Settings -->
    <string name="change_language">שנה שפה</string>
    <string name="dark_mode">שנה ערכת נושא</string>
    <string name="logout">התנתק</string>

</resources>