<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.netanel.ibihometest.products.ui.list.ListFragment"
        android:label="@string/label_list"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_listFragment_to_detailsFragment"
            app:destination="@id/navigation_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.netanel.ibihometest.products.ui.list.description.DetailsFragment"
        android:label="@string/label_details"
        tools:layout="@layout/fragment_details" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.netanel.ibihometest.products.ui.settings.SettingsFragment"
        android:label="@string/label_settings" />


    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.netanel.ibihometest.products.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

</navigation>