<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <!-- Language Switcher -->
    <Button
        android:id="@+id/buttonChangeLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_language" />

    <!-- Dark/Light Mode Toggle -->
    <Switch
        android:id="@+id/switchTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode" />

    <!-- Logout -->
    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="24dp"/>
</LinearLayout>
